Fixing some spacing on the cards

--- a/styles/style.css
+++ b/styles/style.css
@@ -156,7 +156,7 @@ nav a:hover {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
-    max-width: 98%;
+    margin-bottom: 20px;
 }
 
 .card {
